Added new address.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <a class="mx-2" href="https://twitter.com/sfhoo"><i class="fab fa-twitter"></i></a>
                     <a class="mx-2" href="https://www.linkedin.com/in/sfhoo"><i class="fab fa-linkedin-in"></i></a>
                     <a class="mx-2" href="https://github.com/sfhoo"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://sfhoo.eth.xyz"><i class="fab fa-ethereum"></i></a>
                 </div>
             </div>
         </section>
